@@ -1,5 +1,10 @@
 2023-01-30  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/preproc/tbl/main.cpp (process_table): Trivially refactor.
+	Rename `form` to `fmt` to imply "format", not "form".
+
+2023-01-30  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/preproc/tbl/main.cpp (process_format): Throw error
 	diagnostic if more than 2 vertical lines are specified at the
 	beginning of a row definition.
